--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
-DerivedData/Ising_square_magnetisation/Build/Products/Debug/output/
+DerivedData/Ising_square_magnetisation/Build/Products/Debug/output/*
+!DerivedData/Ising_square_magnetisation/Build/Products/Debug/output/analyse.py
